--- a/force-app/main/default/lwc/buttonComponent1/buttonComponent1.html
+++ b/force-app/main/default/lwc/buttonComponent1/buttonComponent1.html
@@ -1,6 +1,10 @@
 <template>
     <div>
-        <lightning-button label="Base" variant="base" title="base button"></lightning-button>
+        <lightning-button label="Base" variant="base" title="base button" ></lightning-button>
+        <lightning-button label="Brand" variant="brand" title="brand button" icon-name="utility:new" icon-position="left"></lightning-button>
+        <lightning-button label="Destructive" variant="destructive" title="destructive button"></lightning-button>
+        <lightning-button label="Neutral" variant="neutral" title="neutral button"></lightning-button>
+        <lightning-button label="Success" variant="success" title="success button"></lightning-button>  
     </div>
     
 </template>
